--- a/content/resources/15-978s07-th.md
+++ b/content/resources/15-978s07-th.md
@@ -3,10 +3,11 @@ content_type: resource
 description: Students working together on a problem. (Image courtesy of premasagar
   on Flickr.)
 file: /courses/15-978-leadership-tools-and-teams-a-product-development-lab-spring-2007/bd7afff7c0f60d5fca14924be99ba6c1_15-978s07-th.jpg
+file_size: 16127
 file_type: image/jpeg
 image_metadata:
-  caption: Students working together on a problem. (Image courtesy of [premasagar](http://www.flickr.com/photos/dharmasphere/)
-    on Flickr.)
+  caption: Students working together on a problem. (Image courtesy of {{% resource_link
+    "2fd9db55-78d8-4187-95c3-808605826478" "premasagar" %}} on Flickr.)
   credit: ''
   image-alt: Photograph of group problem-solving.
 learning_resource_types: []
