--- a/content/resources/15-978s07.md
+++ b/content/resources/15-978s07.md
@@ -6,8 +6,8 @@ file: /courses/15-978-leadership-tools-and-teams-a-product-development-lab-sprin
 file_size: 59396
 file_type: image/jpeg
 image_metadata:
-  caption: Students working together on a problem. (Image courtesy of {{% resource_link
-    "2fd9db55-78d8-4187-95c3-808605826478" "premasagar" %}} on Flickr.)
+  caption: Students working together on a problem. (Image courtesy of [premasagar](http://www.flickr.com/photos/dharmasphere/)
+    on Flickr.)
   credit: ''
   image-alt: Photograph of group problem-solving.
 learning_resource_types: []
