--- a/content/resources/15-978s07.md
+++ b/content/resources/15-978s07.md
@@ -6,8 +6,8 @@ file: /ol-ocw-studio-app/courses/15-978-leadership-tools-and-teams-a-product-dev
 file_size: 59396
 file_type: image/jpeg
 image_metadata:
-  caption: Students working together on a problem. (Image courtesy of [premasagar](http://www.flickr.com/photos/dharmasphere/)
-    on Flickr.)
+  caption: Students working together on a problem. (Image courtesy of {{% resource_link
+    "3ee7093c-ec15-4c9e-99ec-fe0006f0764e" "premasagar" %}} on Flickr.)
   credit: ''
   image-alt: Photograph of group problem-solving.
 learning_resource_types: []
